experiments/32/c0561e0cf395bf3b7870aaa680bcab2cd21328/error
STDOUT:
5:23: error: ‘PrepIncludeStack’ was not declared in this scope
   auto &PrepControl = PrepIncludeStack.back()->back();
                       ^~~~~~~~~~~~~~~~
/root/llvm-compile-time-tracker/llvm-project/llvm/lib/TableGen/TGLexer.cpp:1015:23: note: suggested alternative: ‘LexInclude’
   auto &PrepControl = PrepIncludeStack.back()->back();
                       ^~~~~~~~~~~~~~~~
                       LexInclude
[146/2527] Building CXX object lib/TableGen/CMakeFiles/LLVMTableGen.dir/Main.cpp.o
FAILED: lib/TableGen/CMakeFiles/LLVMTableGen.dir/Main.cpp.o 
CCACHE_CPP2=yes CCACHE_HASHDIR=yes /usr/bin/ccache /usr/bin/c++  -DGTEST_HAS_RTTI=0 -D_GNU_SOURCE -D__STDC_CONSTANT_MACROS -D__STDC_FORMAT_MACROS -D__STDC_LIMIT_MACROS -Ilib/TableGen -I/root/llvm-compile-time-tracker/llvm-project/llvm/lib/TableGen -Iinclude -I/root/llvm-compile-time-tracker/llvm-project/llvm/include -fPIC -fvisibility-inlines-hidden -Werror=date-time -Wall -Wextra -Wno-unused-parameter -Wwrite-strings -Wcast-qual -Wno-missing-field-initializers -pedantic -Wno-long-long -Wimplicit-fallthrough -Wno-maybe-uninitialized -Wno-noexcept-type -Wdelete-non-virtual-dtor -Wno-comment -fdiagnostics-color -ffunction-sections -fdata-sections -O3 -DNDEBUG    -fno-exceptions -fno-rtti -std=c++14 -MD -MT lib/TableGen/CMakeFiles/LLVMTableGen.dir/Main.cpp.o -MF lib/TableGen/CMakeFiles/LLVMTableGen.dir/Main.cpp.o.d -o lib/TableGen/CMakeFiles/LLVMTableGen.dir/Main.cpp.o -c /root/llvm-compile-time-tracker/llvm-project/llvm/lib/TableGen/Main.cpp
In file included from /root/llvm-compile-time-tracker/llvm-project/llvm/lib/TableGen/TGParser.h:16:0,
                 from /root/llvm-compile-time-tracker/llvm-project/llvm/lib/TableGen/Main.cpp:18:
/root/llvm-compile-time-tracker/llvm-project/llvm/lib/TableGen/TGLexer.h:210:8: error: ‘vector’ in namespace ‘std’ does not name a template type
   std::vector<std::unique_ptr<std::vector<PreprocessorControlDesc>>>
        ^~~~~~
ninja: build stopped: subcommand failed.


STDERR:
-- Version: 0.0.0
-- Performing Test HAVE_GNU_POSIX_REGEX
-- Performing Test HAVE_GNU_POSIX_REGEX
-- Performing Test HAVE_GNU_POSIX_REGEX -- failed to compile
-- Performing Test HAVE_POSIX_REGEX
-- Performing Test HAVE_POSIX_REGEX
-- Performing Test HAVE_POSIX_REGEX -- success
-- Performing Test HAVE_STEADY_CLOCK
-- Performing Test HAVE_STEADY_CLOCK
-- Performing Test HAVE_STEADY_CLOCK -- success
Command exited with non-zero status 1
4.69user 1.09system 0:03.47elapsed 166%CPU (0avgtext+0avgdata 260772maxresident)k
0inputs+46688outputs (0major+166673minor)pagefaults 0swaps
